@@ -236,6 +236,7 @@ module  DynArray  = Dyn_array
 
 
 module  Enum     = Extlib.Enum
+module  Seq      = Extlib.Seq
 module  Global   = Extlib.Global
 module  Hashtbl  = Extlib.ExtHashtbl.Hashtbl
 module  Ref_list = Extlib.RefList 
@@ -390,6 +391,7 @@ module  Parsing= Parsing
 module  Format = Extlib.ExtFormat.Format
 module  Printf = Extlib.ExtPrintf.Printf
 module  Print  = Extlib.Print
+module  Value_printer = Extlib.Value_printer
 module  Str    = Extlib.ExtStr.Str
 (*   100module  PCRE (*placeholder*)*)
 module  Scanf  = Extlib.ExtScanf.Scanf
